# raytracer

./: .gitignore  CMakeLists.txt  a.out  compile  example.cc  example2.cc  kdtree.cc  kdtree.h  move  sqrt_opt.cc  sqrt_opt.h  triangle.tcc
profiling/: taylor.cc
